@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.alphatv.gr" version="2.3.0" name="ALPHA Player" provider-name="Twilight0">
+<addon id="plugin.video.alphatv.gr" version="2.3.1" name="ALPHA Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.addon" version="16.1.000"/>
-		<import addon="script.module.tulip" version="2.8.1" />
+		<import addon="script.module.tulip" version="2.8.10" />
 		<import addon="script.module.kodi-six" version="0.0.2"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
@@ -19,7 +19,10 @@
 		<source>https://github.com/Twilight0/plugin.video.alphatv.gr</source>
 		<website>http://www.alphatv.gr/</website>
         <size>598620</size>
-		<news>[B]2.3.0[/B]
+		<news>[B]2.3.1[/B]
+- Revert of the function cache back to traditional get
+
+[B]2.3.0[/B]
 - Utilize function cache instead of traditional get
 - Make youtube API key as text type instead of bytes for Kodi 19+
 
